Added a validation: - if in the new pair there's a duplicate already added - show an error.